# parcing_quotes_site

./: main.py  pyproject.toml  readme.md
output/: output.json
parser/: parser.py
